bugfixing: overlapping/disapearing caption in ie8

--- a/application/skins/baechtelen/css/patches/ielte8.css
+++ b/application/skins/baechtelen/css/patches/ielte8.css
@@ -2,7 +2,8 @@
 @media screen, projection {
     #mainnav em,
     #mainnav strong,
-    .image_list.team {zoom: 1;}
-    .team .item {margin-bottom:2.9em;}
+    .image_list {zoom: 1;}
+    .image_list .item {margin-bottom:1.5em;}
+    .image_list.team .item {margin-bottom:2.9em;}
     .image_list.team {padding-bottom: 4em;}
 }
